--- a/app/views/_base/header.pug
+++ b/app/views/_base/header.pug
@@ -1,8 +1,8 @@
 header.l-header
   .row-grid
-    .col-sm-2.col-lg-4
+    .col-md-2
       p menu
-    .col-sm-8.img--responsive.col-lg-4
+    .col-md-8.img--responsive
       p logo
-    .col-sm-2.col-lg-4
+    .col-md-2
       p search
