--- a/app/views/pages/index.pug
+++ b/app/views/pages/index.pug
@@ -4,5 +4,7 @@ block main
 
   .container
     .row-grid
-      .col-lg-12
-        h1 Content of WebSite
+      .col-md-6
+        h1 Info
+      .col-md-6
+        h1 Image
