--- a/app/views/pages/index.pug
+++ b/app/views/pages/index.pug
@@ -2,9 +2,17 @@ extends ../_base/layout.pug
 
 block main
 
-  .container
+  .slider
+    p slider
+
+  .block-content
     .row-grid
-      .col-md-6
+      .col-lg-6
         h1 Info
-      .col-md-6
+      .col-lg-6
+        h1 Image
+    .row-grid
+      .col-lg-6
+        h1 Info
+      .col-lg-6
         h1 Image
