--- a/app/views/_base/scripts.pug
+++ b/app/views/_base/scripts.pug
@@ -1,3 +1,27 @@
 //- bower:js
 //- endbower
-script(src="./scripts/app.min.js")
+script(src="https://code.jquery.com/jquery-2.2.0.min.js")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js")
+//script(src="../../scripts/app.min.js")
+script(type='text/javascript').
+
+    $(document).on('ready', function() {
+        $('#nutrition').click(function() {
+            $('html,body').animate({scrollTop: $("#nutrition-ancre").offset().top}, 'slow');
+        });  
+        $(".regular").slick({
+            dots: true,
+            infinite: true,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            autoplay: true,
+            autoplaySpeed: 2000,
+            fade: true,
+            cssEase: 'linear'
+        });
+    });
+    function scrollTo(div_name,ancre_name){
+        $('#'+div_name).click(function() {
+            $('html,body').animate({scrollTop: $("#"+ancre_name).offset().top}, 'slow');
+        });  
+    }
