--- a/app/styles/layout/_grid.scss
+++ b/app/styles/layout/_grid.scss
@@ -6,13 +6,18 @@
 .wrapper {
   lost-center: 1280px;
   background-color: #fff;
+  box-shadow: 1px 1px 12px #555;
 }
 
 .row-grid {
   lost-flex-container: row;
   height: 100%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+}
+
+.row-grid_withback{
+  background-image: url(/images/plat-based.png);
+  width:100%;
+  height:auto;
 }
 
 .footer-grid {
@@ -22,7 +27,6 @@
 }
 
 .col-lg-1 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 1/12 !important;
   }
@@ -30,7 +34,6 @@
 }
 
 .col-lg-2 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 1/6 !important;
   }
@@ -38,7 +41,6 @@
 }
 
 .col-lg-3 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 1/4 !important;
   }
@@ -46,7 +48,6 @@
 }
 
 .col-lg-4 { 
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 1/3 !important;
   }
@@ -54,7 +55,6 @@
 }
 
 .col-lg-5 { 
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 5/12 !important;
   }
@@ -62,7 +62,6 @@
 }
 
 .col-lg-6 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 1/2 !important;
   }
@@ -70,7 +69,6 @@
 }
 
 .col-lg-7 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 7/12 !important;
   }
@@ -78,7 +76,6 @@
 }
 
 .col-lg-8 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 2/3 !important;
   }
@@ -86,7 +83,6 @@
 }
 
 .col-lg-9 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 9/12 !important;
   }
@@ -94,7 +90,6 @@
 }
 
 .col-lg-10 { 
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 5/6 !important;
   }
@@ -102,7 +97,6 @@
 }
 
 .col-lg-11 { 
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 11/12 !important;
   }
@@ -110,7 +104,6 @@
 }
 
 .col-lg-12 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("desktop") {
     lost-column: 1/1 !important;
   }
@@ -118,7 +111,6 @@
 }
 
 .col-md-1 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 1/12 !important;
   }
@@ -131,7 +123,6 @@
 }
 
 .col-md-2 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 1/6 !important;
   }
@@ -144,7 +135,6 @@
 }
 
 .col-md-3 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 3/12 !important;
   }
@@ -157,7 +147,6 @@
 }
 
 .col-md-4 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 1/3 !important;
   }
@@ -170,7 +159,6 @@
 }
 
 .col-md-5 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 5/12 !important;
   }
@@ -183,7 +171,6 @@
 }
 
 .col-md-6 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 1/2 !important;
   }
@@ -196,7 +183,6 @@
 }
 
 .col-md-7 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 7/12 !important;
   }
@@ -209,7 +195,6 @@
 }
 
 .col-md-8 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 2/3 !important;
   }
@@ -222,7 +207,6 @@
 }
 
 .col-md-9 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 9/12 !important;
   }
@@ -235,7 +219,6 @@
 }
 
 .col-md-10 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 5/6 !important;
   }
@@ -248,7 +231,6 @@
 }
 
 .col-md-11 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 11/12 !important;
   }
@@ -261,20 +243,15 @@
 }
 
 .col-md-12 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-tablets") {
     lost-column: 1/1 !important;
   }
-  @include media("desktop") {
-    lost-column: 1/6;
-  }
-  @include media("all-phones") {
+  @include media("all-tablets" "all-phones") {
     lost-column: 1/1;
   }
 }
 
 .col-sm-1 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 1/12 !important;
   }
@@ -282,7 +259,6 @@
 }
 
 .col-sm-2 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 1/6 !important;
   }
@@ -290,7 +266,6 @@
 }
 
 .col-sm-3 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 3/12 !important;
   }
@@ -298,7 +273,6 @@
 }
 
 .col-sm-4 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 1/3 !important;
   }
@@ -306,7 +280,6 @@
 }
 
 .col-sm-5 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 5/12 !important;
   }
@@ -314,7 +287,6 @@
 }
 
 .col-sm-6 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 1/2 !important;
   }
@@ -322,7 +294,6 @@
 }
 
 .col-sm-7 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 7/12 !important;
   }
@@ -330,7 +301,6 @@
 }
 
 .col-sm-8 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 2/3 !important;
   }
@@ -338,7 +308,6 @@
 }
 
 .col-sm-9 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 9/12 !important;
   }
@@ -346,7 +315,6 @@
 }
 
 .col-sm-10 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 5/6 !important;
   }
@@ -354,7 +322,6 @@
 }
 
 .col-sm-11 {
-  background-color: rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 11/12 !important;
   }
@@ -362,10 +329,21 @@
 }
 
 .col-sm-12 {
-  background-color:rgba(184, 223, 242, 0.5);
   @include media("all-phones") {
     lost-column: 1/1 !important;
   }
   lost-column: 1/1;
+}
+
+.visible-md {
+  @include media("desktop") {
+    display: none !important;
+  }
+}
+
+.hidden-md {
+  @include media("all-tablets" "all-phones") {
+    display: none !important;
+  }
 }
 
