--- a/app/views/_base/scripts.pug
+++ b/app/views/_base/scripts.pug
@@ -2,7 +2,7 @@
 //- endbower
 script(src="https://code.jquery.com/jquery-2.2.0.min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js")
-//script(src="../../scripts/app.min.js")
+script(src="../../scripts/app.min.js")
 script(type='text/javascript').
 
     $(document).on('ready', function() {
