--- a/app/views/pages/index.pug
+++ b/app/views/pages/index.pug
@@ -11,11 +11,7 @@ block main
               img(src="/images/img-slider1.png")
             div
               img(src="/images/plat-based.png")
-            div
-              img(src="/images/img-slider1.png")
-            div
-              img(src="/images/plat-based.png")
-        .slider__ancre
+        //.slider__ancre
           ul 
             #benefical(onclick='scrollTo("benefical","benefical-ancre")')
               li beneficial carbohydrates
